<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kotlin-serenity</groupId>
    <artifactId>kotlin-serenity</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <threadCount>1</threadCount>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <kotlin.version>1.3.61</kotlin.version>
        <serenity.version>2.1.2</serenity.version>
        <serenity.maven.version>2.1.2</serenity.maven.version>
        <!--<serenity.cucumber.version>1.9.51</serenity.cucumber.version>-->
    </properties>

    <dependencies>
        <!-- Kotlin related -->
        <!--<dependency>-->
            <!--<groupId>org.jetbrains.kotlin</groupId>-->
            <!--<artifactId>kotlin-reflect</artifactId>-->
            <!--<version>${kotlin.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.jetbrains.kotlin</groupId>-->
            <!--<artifactId>kotlin-stdlib-jdk8</artifactId>-->
            <!--<version>${kotlin.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
            <version>2.10.2</version>
        </dependency>

        <!-- Logger -->
        <dependency>
            <groupId>io.github.microutils</groupId>
            <artifactId>kotlin-logging</artifactId>
            <version>1.7.8</version>
        </dependency>

        <!-- Common -->
        <!--<dependency>-->
            <!--<groupId>org.apache.commons</groupId>-->
            <!--<artifactId>commons-lang3</artifactId>-->
            <!--<version>3.4</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>commons-io</groupId>-->
            <!--<artifactId>commons-io</artifactId>-->
            <!--<version>2.6</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.projectlombok</groupId>-->
            <!--<artifactId>lombok</artifactId>-->
            <!--<version>${lombok.version}</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>mysql</groupId>-->
            <!--<artifactId>mysql-connector-java</artifactId>-->
            <!--<version>5.1.39</version>-->
        <!--</dependency>-->

        <!--serenity-->
        <!--<dependency>-->
            <!--<groupId>net.serenity-bdd</groupId>-->
            <!--<artifactId>serenity-core</artifactId>-->
            <!--<version>${serenity.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>net.serenity-bdd</groupId>-->
            <!--<artifactId>serenity-junit</artifactId>-->
            <!--<version>${serenity.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <!--<dependency>-->
            <!--<groupId>net.serenity-bdd</groupId>-->
            <!--<artifactId>serenity-model</artifactId>-->
            <!--<version>${serenity.version}</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>net.serenity-bdd</groupId>-->
            <!--<artifactId>serenity-reports</artifactId>-->
            <!--<version>${serenity.version}</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber4</artifactId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>4.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit</artifactId>
            <version>${kotlin.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-maven-plugin -->
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-plugin</artifactId>
            <version>1.3.61</version>
            <scope>provided</scope>
        </dependency>



        <!--<dependency>-->
            <!--<groupId>org.codehaus.groovy</groupId>-->
            <!--<artifactId>groovy-all</artifactId>-->
            <!--<version>1.8.6</version>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>junit</groupId>-->
            <!--<artifactId>junit</artifactId>-->
            <!--<version>4.12</version>-->
            <!--<scope>test</scope>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.assertj</groupId>-->
            <!--<artifactId>assertj-core</artifactId>-->
            <!--<version>1.7.0</version>-->
            <!--<scope>test</scope>-->
        <!--</dependency>-->

    </dependencies>

    <build>
        <sourceDirectory>src/main/kotlin</sourceDirectory>
        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
        <plugins>
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-enforcer-plugin</artifactId>-->
                <!--<version>1.4</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>enforce</id>-->
                        <!--<configuration>-->
                            <!--<rules>-->
                                <!--<AlwaysPass/>-->
                            <!--</rules>-->
                            <!--<fail>true</fail>-->
                        <!--</configuration>-->
                        <!--<goals>-->
                            <!--<goal>enforce</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <threadCount>${threadCount}</threadCount>
                    <parallel>classes</parallel>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.18</version>
                <configuration>
                    <includes>
                        <include>**/*.kt</include>
                        <include>**/*Runner.kt</include>
                    </includes>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--<plugin>-->
                <!--<artifactId>maven-war-plugin</artifactId>-->
                <!--<configuration>-->
                    <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
                <!--</configuration>-->
            <!--</plugin>-->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-compiler-plugin</artifactId>-->
                <!--<version>3.2</version>-->
                <!--<configuration>-->
                    <!--<source>1.8</source>-->
                    <!--<target>1.8</target>-->
                <!--</configuration>-->
            <!--</plugin>-->
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.maven.version}</version>
                <!--<dependencies>-->
                    <!--<dependency>-->
                        <!--<groupId>net.serenity-bdd</groupId>-->
                        <!--<artifactId>serenity-core</artifactId>-->
                        <!--<version>${serenity.version}</version>-->
                    <!--</dependency>-->
                <!--</dependencies>-->
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <configuration>
                    <skip>false</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <!--<configuration>-->
                    <!--<jvmTarget>1.8</jvmTarget>-->
                <!--</configuration>-->
            </plugin>
            <!--<plugin>-->
                <!--<groupId>org.jetbrains.kotlin</groupId>-->
                <!--<artifactId>kotlin-maven-plugin</artifactId>-->
                <!--<version>${kotlin.version}</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>compile</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals>-->
                            <!--<goal>compile</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
                <!--<configuration>-->
                    <!--<args>-->
                        <!--<arg>-Xjsr305=strict</arg>-->
                    <!--</args>-->
                    <!--<compilerPlugins>-->
                        <!--<plugin>all-open</plugin>-->
                    <!--</compilerPlugins>-->
                    <!--<pluginOptions>-->
                        <!--<option>all-open:annotation=javax.persistence.Entity</option>-->
                    <!--</pluginOptions>-->
                    <!--<languageVersion>1.3</languageVersion>-->
                <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>



</project>